--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,16 @@
 [submodule "Voxel/vendor/spdlog"]
 	path = Voxel/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+	branch = "v1.x"
 [submodule "Voxel/vendor/glfw"]
 	path = Voxel/vendor/glfw
 	url = https://github.com/RealGreyCode/glfw
+	branch = "master"
 [submodule "Voxel/vendor/ImGui"]
 	path = Voxel/vendor/ImGui
 	url = https://github.com/RealGreyCode/ImGui
+	branch = "docking"
 [submodule "Voxel/vendor/glm"]
 	path = Voxel/vendor/glm
 	url = https://github.com/g-truc/glm
+	branch = "master"
