--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,20 +4,23 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=484,218
-Size=481,536
+ViewportPos=2187,246
+ViewportId=0xA4D966FE
+Pos=656,0
+Size=658,758
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000003,0
 
 [Window][Settings]
 Pos=182,125
 Size=187,95
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000004,0
 
 [Window][Debug]
-Pos=73,218
-Size=409,536
+ViewportPos=1243,193
+ViewportId=0xA4D966FE
+Size=633,808
 Collapsed=0
 DockId=0x00000002,0
 
@@ -29,11 +32,11 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Docking][Data]
-DockNode        ID=0x00000001 Pos=289,390 Size=892,536 Split=X
+DockNode        ID=0x00000001 Pos=1243,193 Size=633,808 Split=X
   DockNode      ID=0x00000006 Parent=0x00000001 SizeRef=410,536 Selected=0x46B5E99C
   DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=977,536 Split=X
-    DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=409,95 Split=X
-      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=145,95 Selected=0xAD6468A3
-      DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=150,95 Selected=0x1C33C293
-    DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=481,95 Selected=0xE927CF2F
+    DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=625,95
+    DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=265,95 Split=X Selected=0xE927CF2F
+      DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=654,758 Selected=0xAD6468A3
+      DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=658,758 Selected=0xE927CF2F
 
